persistence: cleaned up testfiles and repository files